bokun api integration and data feching done

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+BOKUN_ACCESS_KEY=f342e5c9a2e3480e8ff09179e56082eb
+BOKUN_SECRET_KEY=007bd4afc13b4bb6bb2a5d49141b5672
+BOKUN_API_BASE_URL=https://api.bokun.io
